--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,46 @@
 version: 2.1
 jobs:
-  build:
+  rubocop:
+    docker:
+      - image: circleci/ruby:2.6.3-node-browsers
+        environment:
+          RAILS_ENV: test
+
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ROOT_HOST: '127.0.0.1'
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: root
+
+    working_directory: ~/quest_review
+
+    steps:
+      - checkout
+
+      # Restore bundle cache
+      - restore_cache:
+          keys:
+            - gemfiles-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+            - gemfiles-{{ .Branch }}-
+            - gemfiles-master-
+
+      # Bundle install dependencies
+      - run:
+          name: Install dependencies
+          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
+
+      # Store bundle cache
+      - save_cache:
+          key: gemfiles-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
+
+      # Rubocop
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop
+
+  rspec:
     docker:
       - image: circleci/ruby:2.6.3-node-browsers
         environment:
@@ -45,13 +85,15 @@ jobs:
             bundle exec rake db:create
             bundle exec rake db:schema:load
 
-      # Rubocop
-      - run:
-          name: Rubocop
-          command: bundle exec rubocop
-
       # Rspec
       - run:
           name: Rspec
           command: bundle exec rspec
+
+workflows:
+  version: 2.1
+  build:
+    jobs:
+      - rubocop
+      - rspec
 
