--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -72,3 +72,6 @@ Style/RedundantFetchBlock:
 Style/BlockComments:
   Exclude:
     - 'spec/spec_helper.rb'
+
+Style/EmptyMethod:
+  EnforcedStyle: expanded
